k8s/client-depl.yaml
# client Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-depl
    labels:
        app: client
spec:
    replicas: 1
    selector:
        matchLabels:
            app: client
    template:
        metadata:
            labels:
                app: client
        spec:
            containers:
                - name: client
                  image: localhost:5000/client
                  ports:
                      - containerPort: 80
                  imagePullPolicy: Always
---
# client service
apiVersion: v1
kind: Service
metadata:
    name: client-srv
spec:
    selector:
        app: client
    ports:
        - name: client
          protocol: TCP
          port: 80
          targetPort: 80
