k8s/shrink-depl.yaml
# Shrink Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shrink-depl
  labels:
    app: shrink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shrink
  template:
    metadata:
      labels:
        app: shrink
    spec:
      containers:
        - name: shrink
          image: shrinkurl/shrink
          ports:
            - containerPort: 8000
---
# Shrink service
apiVersion: v1
kind: Service
metadata:
  name: shrink-srv
spec:
  selector:
    app: shrink
  ports:
    - name: shrink
      protocol: TCP
      port: 8000
      targetPort: 8000
