k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: shrinkurl-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: shrinkurl.com
      http:
        paths:
          - path: /
            backend:
              serviceName: client-srv
              servicePort: 80
          - path: /sign*
            backend:
              serviceName: client-srv
              servicePort: 80
          - path: /auth/*
            backend:
              serviceName: auth-srv
              servicePort: 8000          
          - path: /new/free
            backend:
              serviceName: shrink-srv
              servicePort: 8000
          - path: /r/[A-Za-z0-9]{6}
            backend:
              serviceName: shrink-srv
              servicePort: 8000
